--- a/index.html
+++ b/index.html
@@ -118,26 +118,27 @@
     
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="projects">
       <div class="w-100">
-        <h2 class="mb-5">Projects</h2>
+        <h2 class="mb-5">Significant Projects</h2>
        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">GeoGuesser Mock Game</h3>
-            <div class="subheading mb-3"> Fullstack Developer </div>
-            <p> Part of a four-person group that developed a GeoGuesser game where you are dropped into a random area of the Earth and you have to guess where you are based on your surrounding in Google Maps' Street View. I was part of both the backend and frontend development focusing mostly on using the Google Maps API to develop the game mechanics we sought. Additionally, I set up the SQL database for storing scores on a leaderboard and helped design and develop the UI of the web app.</p>
+            <h3 class="mb-0">TeXNet</h3>
+            <div class="subheading mb-3"> AI Course Final Project </div>
+            <p> Part of a 2-person group where we developed a model that translates LaTex images to math code with near state-of-the-art performance. This was done by porting an old Tensorflow model to Python3 and introducing our own dataset scraped from online research papers containing LaTex images. The model was trained on a Google Deep Learning Machine; more info can be found <a href="https://github.com/rvente/TeXNet.ai"> here</a>. </p>
+            <a href="https://www.youtube.com/watch?v=EnAj0js-ZRY&ab_channel=Blake">YouTube Demonstration</a>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">May 2017 - June 2017</span>
+            <span class="text-primary">March 2020 - June 2020</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Watson Study Buddy</h3>
-            <div class="subheading mb-3"> Fullstack Developer</div>
-            <p>Project undertaken at Lehman Hacks 2019 where our group sought to create an app that would create personalized study quides by transcribing lecture recordings to speech and utilizing natural language analytics to extract key concepts. These concepts would then be used to point users to additionaly study resources or create a study guide in-app. I began learning react-native for the developement of the app and we will use MongoDB Atlas to store user data and saved guides. This is an in-progress project. </p>
+            <h3 class="mb-0">SmartShop</h3>
+            <div class="subheading mb-3"> Fullstack Developer </div>
+            <p>Project undertaken at SBUHacks, virtual hackathon during COVID, where our 4-person group won the prize for Best Social Impact. The app revolved around creating a touch-free shopping experience using QR codes. I worked on implementing the Flutter front-end of the app, state logic, and creating the GraphQL server for the backend. More info about the project can be found <a href="https://devpost.com/software/smartshop-clbrzn"> here</a>. </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">IN PROGRESS</span>
+            <span class="text-primary">September 2020</span>
           </div>
         </div>
       </div>
@@ -155,7 +156,7 @@
             <h3 class="mb-0">Macaulay Honors College - At CUNY Hunter</h3>
             <div class="subheading mb-3">Bachelor of Arts</div>
             <div>Computer Science </div>
-            <p>Major GPA: 3.9</p>
+            <p>Major GPA: 3.93</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">August 2018 - PRESENT</span>
