--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <p>Redesigned the headers and footers of this company's website using Bootstrap and custom CSS+JSS to make the website more mobile-friendly.Additionally, utilized the Google Maps API and Javascript to create a footer map that shows the company location closest to the user's location (if allowed to be accessed). </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">June 2018 - Present</span>
+            <span class="text-primary">Summer 2020</span>
           </div>
         </div>
       </div>
@@ -119,6 +119,16 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="projects">
       <div class="w-100">
         <h2 class="mb-5">Significant Projects</h2>
+	<div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">StudyBuddy</h3>
+            <div class="subheading mb-3"> University Capstone Project </div>
+		  <p> Part of a 5-person group where we developed a cross-platform iOS/Android/Web app that transcribes lectures, generates study notes, and provides organizational capabilities with search to help students succeed in their classes. I worked on the Flutter Front End, integrating services like Algolia (search indexing), and was an integral part of figuring out our data pipeline from audio file to finished editable transcription. The project can be viewed <a href="https://github.com/taradactyl27/studybuddy"> here</a>.  </p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">August 2021 - December 2021</span>
+          </div>
+        </div>
        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">TeXNet</h3>
@@ -141,6 +151,16 @@
             <span class="text-primary">September 2020</span>
           </div>
         </div>
+	      <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Non-Fungible Token (NFT) Authenticity using Sentiment Analysis</h3>
+            <div class="subheading mb-3"> Natural Language Processing Course Final Project </div>
+		  <p> Part of a 2-person research project exploring the classification of genuine NFT projects from scams with sentiment and price analysis using machine learning classifiers and deep learning. I worked on assembling the data and scraping OpenSea (secondary marketplace for NFTs) for around 50,000 transactions to be used for price analysis as part of the classification process. More info about the project can be found <a href="https://github.com/taradactyl27/nft-sentiment-analysis"> here</a>. </p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">October 2021 - December 2021</span>
+          </div>
+        </div>
       </div>
   </div>
   </section>
@@ -155,11 +175,11 @@
           <div class="resume-content">
             <h3 class="mb-0">Macaulay Honors College - At CUNY Hunter</h3>
             <div class="subheading mb-3">Bachelor of Arts</div>
-            <div>Computer Science </div>
-            <p>Major GPA: 3.93</p>
+            <div>Computer Science --- Minors: Math and Music </div>
+            <p>Major GPA: 3.95</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - PRESENT</span>
+            <span class="text-primary">August 2018 - December 2021</span>
           </div>
         </div>
 
@@ -167,7 +187,7 @@
           <div class="resume-content">
             <h3 class="mb-0">Stuyvesant High School</h3>
             <div class="subheading mb-3">Honor Roll</div>
-            <p>GPA: 3.8</p>
+            <p>GPA: 3.91</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">September 2014 - June 2018</span>
@@ -231,8 +251,8 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
       <div class="w-100">
         <h2 class="mb-5">Interests</h2>
-        <p>Apart from being a web developer, I enjoy my time exploring the food scene around New York City and longboarding around my area and the city. There's so much New York has to offer that even New Yorkers don't know themselves.</p>
-        <p class="mb-0">When forced indoors, I am a self-taught pianist and have fun coming up with new melodies or recreating my favorite songs. Aside from that, my friends and I are into gaming and enjoy team shooters that place an emphasis on leadership roles and performing under pressure.</p>
+        <p>Apart from being a developer, I enjoy my time exploring the food scene around New York City and longboarding around my area and the city. There's so much New York has to offer that even New Yorkers don't know themselves.</p>
+        <p class="mb-0">When indoors, I am a self-taught pianist, guitarist, and vocalist and have fun playing around on any and all instruments.  </p>
       </div>
     </section>
   </div>
